--- a/apps/material-calc/index.html
+++ b/apps/material-calc/index.html
@@ -56,7 +56,16 @@ description: P5X 캐릭터 육성 재료 계산기 (레벨/무기/스킬/심상)
                     <option value="release_desc" data-lang-key="sort.releaseDesc">출시 순 ↓</option>
                     <option value="name_asc" data-lang-key="sort.nameAsc">이름 순 ↑</option>
                     <option value="name_desc" data-lang-key="sort.nameDesc">이름 순 ↓</option>
+                    <option value="custom" data-lang-key="sort.custom">사용자 지정</option>
                 </select>
+                <button id="plannerSortCustomBtn" class="icon-btn" title="Custom order" style="display:none;padding:6px 6px;line-height:0;">
+                    <!-- sliders icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <line x1="4" y1="6" x2="20" y2="6"/><circle cx="10" cy="6" r="2"/>
+                        <line x1="4" y1="12" x2="20" y2="12"/><circle cx="14" cy="12" r="2"/>
+                        <line x1="4" y1="18" x2="20" y2="18"/><circle cx="8" cy="18" r="2"/>
+                    </svg>
+                </button>
             </label>
             <button class="filter-reset-btn" id="plannerFilterReset" style="display:none;">
                 <img src="{{ site.baseurl }}/assets/img/character-cards/reset.png" alt="초기화" />
@@ -409,6 +418,37 @@ description: P5X 캐릭터 육성 재료 계산기 (레벨/무기/스킬/심상)
             </div>
         </div>
     </div>
+
+    <!-- 커스텀 정렬(우선순위) 모달 -->
+    <div id="customOrderModal" class="modal" aria-hidden="true">
+        <div class="modal-dialog large">
+            <div class="modal-header">
+                <h3 id="customOrderTitle">Priority</h3>
+                <button class="icon-btn close" data-close>✕</button>
+            </div>
+            <div class="modal-body">
+                <div style="opacity:.8;margin-bottom:8px;" id="customOrderHint">Drag to change order</div>
+                <div id="customList" class="priority-col single"></div>
+            </div>
+            <div class="modal-footer">
+                <button id="customOrderCancel" class="secondary-btn" data-lang-key="cancel">취소</button>
+                <button id="customOrderSave" class="primary-btn" data-lang-key="save">저장</button>
+            </div>
+        </div>
+    </div>
+
+    <style>
+        /* Priority modal layout */
+        .priority-col { background:#121015; border:1px solid rgba(255,255,255,.1); border-radius:8px; padding:10px; max-height:70vh; overflow:auto; }
+        .priority-col.single { max-width:720px; margin:0 auto; }
+        .order-item { display:flex; align-items:center; gap:10px; background:#1a1720; border:1px solid rgba(255,255,255,.1); border-radius:8px; padding:8px; margin-bottom:8px; cursor:grab; }
+        .order-item:active { cursor:grabbing; }
+        .order-num { width:28px; height:28px; display:flex; align-items:center; justify-content:center; background:#4b3b2c; color:#fff; border-radius:6px; font-weight:700; }
+        .order-avatar { width:30px; height:30px; object-fit:cover; border-radius:6px; }
+        .order-label { white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
+        .order-placeholder { border:2px dashed rgba(255,255,255,.3); border-radius:8px; height:46px; margin-bottom:8px; }
+        @media (max-width: 760px){ .priority-col.single { max-width:100%; } }
+    </style>
 
 <script>
 // 언어별 SEO 설정 함수
