--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ alternate_urls:
 
     <!-- Carousel: inserted above menu-cards -->
     <div id="home-carousel-root" style="width: 100%;"></div>
+
     <div class="separator-line"></div>
     <!-- Main content -->
     <div class="main-content">
@@ -164,6 +165,8 @@ alternate_urls:
             
         </div>
     </div>
+    <!-- Guild Bosses Section -->
+    <div id="home-bosses-root"></div>
     <div class="separator-line"></div>
     <div class="middle-container">
         <div class="popular-content">
@@ -293,6 +296,12 @@ alternate_urls:
 
 <!-- Carousel JS -->
 <script src="{{ site.baseurl }}/assets/js/home/carousel.js?v={{ site.time | date: '%s' }}"></script>
+<!-- Tooltip (for affix hover) -->
+<script src="{{ site.baseurl }}/assets/js/tooltip.js?v={{ site.time | date: '%s' }}"></script>
+<!-- Bosses JS -->
+<script src="{{ site.baseurl }}/assets/js/home/bosses.js?v={{ site.time | date: '%s' }}"></script>
+<!-- SOS JS -->
+<script src="{{ site.baseurl }}/assets/js/home/sos.js?v={{ site.time | date: '%s' }}"></script>
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/js/home/carousel.css?v={{ site.time | date: '%s' }}">
 
 <!-- iframe -->
