--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ alternate_urls:
         margin-top: 5px;  /* 선택기와의 간격 */
     }
 
+    /* Quick Grid styles moved to assets/js/home/quick-grid.js */
 </style>
 
 
@@ -85,85 +86,12 @@ alternate_urls:
     <!-- Carousel: inserted above menu-cards -->
     <div id="home-carousel-root" style="width: 100%;"></div>
 
-    <div class="separator-line"></div>
+    <!--<div class="separator-line"></div>-->
     <!-- Main content -->
     <div class="main-content">
-        <div class="menu-cards">
-            <div class="menu-card">
-                <a href="./character/?v=' + APP_VERSION" class="card-content" style="text-decoration: none; color: inherit;">
-                    <div class="text-section">
-                        <h2 id="menu-character-title">괴도 <img src="{{ site.baseurl }}/assets/img/home/icon1.png" alt="괴도 아이콘" class="title-icon"></h2>
-                        <p class="desktop-description" id="menu-character-desc-desktop">보다 높은 점수, 보다 쉬운 클리어를 위한<br>괴도별 육성 전략을 만나보세요</p>
-                        <p class="mobile-description" id="menu-character-desc-mobile">괴도별 육성 전략을 만나보세요</p>
-                        <button class="view-more" id="menu-character-btn">바로가기 →</button>
-                    </div>
-                    <img src="{{ site.baseurl }}/assets/img/home/1.webp" alt="괴도 일러스트" class="card-illustration" loading="lazy">
-                </a>
-            </div>
-            
-            <div class="menu-card" id="menu-persona-card">
-                <a href="./persona/?v=' + APP_VERSION" class="card-content" style="text-decoration: none; color: inherit;">
-                    <div class="text-section">
-                        <h2 id="menu-persona-title">페르소나 <img src="{{ site.baseurl }}/assets/img/home/icon2.png" alt="페르소나 아이콘" class="title-icon"></h2>
-                        <p class="desktop-description" id="menu-persona-desc-desktop">핵심 페르소나 추천과 더불어<br>각 페르소나에 어울리는 스킬 세팅까지</p>
-                        <p class="mobile-description" id="menu-persona-desc-mobile">핵심 페르소나 추천과 스킬 세팅까지</p>
-                        <button class="view-more" id="menu-persona-btn">바로가기 →</button>
-                    </div>
-                    <img src="{{ site.baseurl }}/assets/img/home/2.webp" alt="페르소나 일러스트" class="card-illustration" loading="lazy">
-                </a>
-            </div>
-
-            <div class="menu-card" id="menu-revelations-card">
-                <a href="./revelations/?v=' + APP_VERSION" class="card-content" style="text-decoration: none; color: inherit;">
-                    <div class="text-section">
-                        <h2 id="menu-revelations-title">계시 <img src="{{ site.baseurl }}/assets/img/home/icon3.png" alt="계시 아이콘" class="title-icon"></h2>
-                        <p class="desktop-description" id="menu-revelations-desc-desktop">계시 정보들을 한 눈에!<br>속성별, 일월성진별 원하는 대로 매칭</p>
-                        <p class="mobile-description" id="menu-revelations-desc-mobile">계시 정보들을 한 눈에!</p>
-                        <button class="view-more" id="menu-revelations-btn">바로가기 →</button>
-                    </div>
-                    <img src="{{ site.baseurl }}/assets/img/home/3.webp" alt="계시 일러스트" class="card-illustration" loading="lazy">
-                </a>
-            </div>
-
-            <div class="menu-card" id="menu-tactic-card">
-                <a href="./tactic/" class="card-content" style="text-decoration: none; color: inherit;">
-                    <div class="text-section">
-                        <h2 id="menu-tactic-title">택틱 <img src="{{ site.baseurl }}/assets/img/home/icon4.png" alt="택틱 아이콘" class="title-icon"></h2>
-                        <p class="desktop-description" id="menu-tactic-desc-desktop">본인만의 택틱을 만들고 공유하고,<br>바다와 흉몽에서 높은 점수를 쟁취하세요</p>
-                        <p class="mobile-description" id="menu-tactic-desc-mobile">본인만의 택틱을 만들고 공유하세요</p>
-                        <button class="view-more" id="menu-tactic-btn">바로가기 →</button>
-                    </div>
-                    <img src="{{ site.baseurl }}/assets/img/home/4.webp" alt="택틱 일러스트" class="card-illustration" loading="lazy">
-                </a>
-            </div>
-
-            <div class="menu-card" id="menu-article-card">
-                <a href="./article/" class="card-content" style="text-decoration: none; color: inherit;">
-                    <div class="text-section">
-                        <h2 id="menu-article-title">가이드 <img src="{{ site.baseurl }}/assets/img/home/icon5.png" alt="아티클 아이콘" class="title-icon"></h2>
-                        <p class="desktop-description" id="menu-article-desc-desktop">게임에서 알려주지 않는 정보들을 정리했어요</p>
-                        <p class="mobile-description" id="menu-article-desc-mobile">게임에서 알려주지 않는 정보들을 정리했어요</p>
-                        <button class="view-more" id="menu-article-btn">바로가기 →</button>
-                    </div>
-                    <img src="{{ site.baseurl }}/assets/img/home/5.webp" alt="아티클 일러스트" class="card-illustration" loading="lazy">
-                </a>
-            </div>
-
-            <div class="menu-card" id="menu-tier-card">
-                <a href="./tier/position-tier/" class="card-content" style="text-decoration: none; color: inherit;">
-                    <div class="text-section">
-                        <h2 id="menu-tier-title">티어 <img src="{{ site.baseurl }}/assets/img/home/icon6.png" alt="티어 아이콘" class="title-icon"></h2>
-                        <p class="desktop-description" id="menu-tier-desc-desktop">티어를 참고하여 괴도를 육성해보세요</p>
-                        <p class="mobile-description" id="menu-tier-desc-mobile">티어를 참고하여 괴도를 육성해보세요</p>
-                        <button class="view-more" id="menu-tier-btn">바로가기 →</button>
-                    </div>
-                    <img src="{{ site.baseurl }}/assets/img/home/6.webp" alt="티어 일러스트" class="card-illustration" loading="lazy">
-                </a>
-            </div>
-        </div>
-        <div class="update-notice">
-            
-        </div>
+        <!-- Quick Launcher Grid -->
+        <div class="quick-grid" id="quick-grid"></div>
+        <div class="update-notice"></div>
     </div>
     <!-- Guild Bosses Section -->
     <div id="home-bosses-root"></div>
@@ -302,6 +230,8 @@ alternate_urls:
 <script src="{{ site.baseurl }}/assets/js/home/bosses.js?v={{ site.time | date: '%s' }}"></script>
 <!-- SOS JS -->
 <script src="{{ site.baseurl }}/assets/js/home/sos.js?v={{ site.time | date: '%s' }}"></script>
+<!-- Quick Grid JS -->
+<script src="{{ site.baseurl }}/assets/js/home/quick-grid.js?v={{ site.time | date: '%s' }}"></script>
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/js/home/carousel.css?v={{ site.time | date: '%s' }}">
 
 <!-- iframe -->
