--- a/apps/tactic/tactics.html
+++ b/apps/tactic/tactics.html
@@ -59,7 +59,7 @@ description: 페르소나5 더 팬텀 X 택틱들을 확인하세요.
             <div class="card-header" style="display:flex; align-items:center; justify-content:space-between;">
                 <h3 id="charFilterTitle" style="margin:0;">캐릭터 필터</h3>
             </div>
-            <div id="characterFilterGrid" class="character-grid" style="display:grid; padding-top:16px; width:100%; max-height: 200px; overflow:auto;"></div>
+            <div id="characterFilterGrid" class="character-grid" style="display:grid; padding-top:16px; padding-left:4px; width:calc(100% - 4px); max-height: 200px; overflow:auto;"></div>
         </div>
     </div>
 
