--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -77,12 +77,14 @@ alternate_urls:
 
         </div>
 
+        <!--
         <div class="about-section" id="exchange-code-section">
             <button id="exchangeCodeButton" class="donate-button">KR 교환코드 (v4.4.1)</button>
         </div>
+        -->
 
         <div class="about-section">
-            <button id="donateButton" class="donate-button" data-kr="후원 | Donate" data-en="Support | Donate" data-jp="サポート | 寄付">후원 | Donate</button>
+            <button id="donateButton" class="donate-button" data-kr="서포트 | Donate" data-en="Support | Donate" data-jp="サポート | 寄付">서포트 | Donate</button>
         </div>
 
         <!-- Inline donate (EN/JP only) -->
@@ -134,6 +136,7 @@ alternate_urls:
                             <li>ochette</li> <!--6$ 25/06/18-->
                             <li>Sages</li> <!--6$ 25/09/06-->
                             <li>Nerecky</li> <!--3$ 25/09/10-->
+                            <li>Main</li> <!--3$ 25/10/18-->
                             <li>Ian</li><!--3000 25/06/20-->
                         </ul>
                     </div>
@@ -262,7 +265,7 @@ alternate_urls:
                 if (title) {
                     title.textContent = currentLang === 'en' ? 'Supporters List' :
                                       currentLang === 'jp' ? '支援者リスト' :
-                                      '후원자 목록';
+                                      '서포터 목록';
                 }
             }
 
@@ -355,7 +358,7 @@ alternate_urls:
                 site_title: "루페르넷 lufel.net",
                 contact_title: "문의 및 피드백",
                 thanks_title: "Thanks To",
-                donate_button: "후원 | Donate"
+                donate_button: "서포트 | Support"
             },
             en: {
                 language_notice: "🌍 English translation is in progress. Some content may still be in Korean.",
