--- a/apps/revelations/index.html
+++ b/apps/revelations/index.html
@@ -362,7 +362,7 @@ alternate_urls:
                 filter_effect: "Effect",
                 effect_buff: "Buff",
                 effect_debuff: "Debuff",
-                effect_additional: "Follow-up",
+                effect_additional: "Resonance",
                 effect_hl: "HL 25%",
                 effect_heal: "Heal",
                 count_unit: "",
