--- a/index.html
+++ b/index.html
@@ -101,20 +101,20 @@ alternate_urls:
             <h2 id="popular-characters-title">인기 괴도</h2>
             <div class="character-cards">
                 <div class="character-card">
+                    <div class="character-card-img"><a href="./character.html?name=후카&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/후카.webp" alt="후카"></a></div>
+                    <div class="character-card-text"><p>후카</p></div>
+                </div>
+                <div class="character-card">
+                    <div class="character-card-img"><a href="./character.html?name=미츠루&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/미츠루.webp" alt="미츠루"></a></div>
+                    <div class="character-card-text"><p>미츠루</p></div>
+                </div>
+                <div class="character-card">
                     <div class="character-card-img"><a href="./character.html?name=YUI·스텔라&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/YUI·스텔라.webp" alt="YUI·스텔라"></a></div>
                     <div class="character-card-text"><p>YUI·스텔라</p></div>
                 </div>
                 <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=카타야마&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/카타야마.webp" alt="카타야마 쿠미"></a></div>
-                    <div class="character-card-text"><p>카타야마 쿠미</p></div>
-                </div>
-                <div class="character-card">
                     <div class="character-card-img"><a href="./character.html?name=미유·여름&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/미유·여름.webp" alt="미유·여름"></a></div>
                     <div class="character-card-text"><p>미유·여름</p></div>
-                </div>
-                <div class="character-card">
-                    <div class="character-card-img"><a href="./character.html?name=미나미·여름&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/미나미·여름.webp" alt="미나미·여름"></a></div>
-                    <div class="character-card-text"><p>미나미·여름</p></div>
                 </div>
                 <div class="character-card">
                     <div class="character-card-img"><a href="./character.html?name=마나카&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/마나카.webp" alt="마나카"></a></div>
