--- a/tier/position-tier.html
+++ b/tier/position-tier.html
@@ -859,3 +859,4 @@ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.m
         }
     });
 </script> 
+<script src="/tier/capture.js"></script>
