--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ alternate_urls:
                 <div class="guide-card-content">
                     <div class="article"><a href="https://docs.google.com/spreadsheets/d/1L47W0r5nHpAlU_qUY3HuslcqBRS78tHC682eFCXiftM" target="_blank" style="text-decoration: none; color: inherit;">∘ 협력자 선물 & 선택지</a></div>
                     <div class="article"><a href="https://gall.dcinside.com/mgallery/board/view/?id=persona5phantomx&no=158597" target="_blank" style="text-decoration: none; color: inherit;">∘ 협력자 우선순위 추천</a></div>
-                    <div class="article"><a href="https://arca.live/b/persona5x/112002828" target="_blank" style="text-decoration: none; color: inherit;">∘ 이치가야 낚시</a></div>
+                    <div class="article"><a href="https://gall.dcinside.com/m/persona5phantomx/191138" target="_blank" style="text-decoration: none; color: inherit;">∘ 이치가야 낚시</a></div>
                     <div class="article"><a href="https://arca.live/b/persona5x/110240842" target="_blank" style="text-decoration: none; color: inherit;">∘ 요리 레시피 획득</a></div>
                 </div>
             </div>
